--- a/index.html
+++ b/index.html
@@ -1049,27 +1049,27 @@
             </div>
             <div class="language-grid">
                 <div class="language-item">
-                    <div class="language-flag">📰</div>
+                    <div class="language-flag"><img src="onenews.png" alt="newspaperimage" style="width: 100px;"></div>
                     <h3>English</h3>
                 </div>
                 <div class="language-item">
-                    <div class="language-flag">📰</div>
+                    <div class="language-flag"><img src="onenews.png" alt="newspaperimage" style="width: 100px;"></div>
                     <h3>Arabic</h3>
                 </div>
                 <div class="language-item">
-                    <div class="language-flag">📰</div>
+                    <div class="language-flag"><img src="onenews.png" alt="newspaperimage" style="width: 100px;"></div>
                     <h3>Urdu</h3>
                 </div>
                 <div class="language-item">
-                    <div class="language-flag">📰</div>
+                    <div class="language-flag"><img src="onenews.png" alt="newspaperimage" style="width: 100px;"></div>
                     <h3>Hindi</h3>
                 </div>
                 <div class="language-item">
-                    <div class="language-flag">📰</div>
+                    <div class="language-flag"><img src="onenews.png" alt="newspaperimage" style="width: 100px;"></div>
                     <h3>Kannada</h3>
                 </div>
                 <div class="language-item">
-                    <div class="language-flag">📰</div>
+                    <div class="language-flag"><img src="onenews.png" alt="newspaperimage" style="width: 100px;"></div>
                     <h3>Malayalam</h3>
                 </div>
             </div>
