--- a/index.html
+++ b/index.html
@@ -1400,7 +1400,7 @@
                             <img src="avatarone.jpg" alt="" style="width: 50px;">
                         </div>
                         <div>
-                            <h4>Ahmed Khan</h4>
+                            <h4>Muhammad Shafi p</h4>
                             <p>Arabic Student</p>
                         </div>
                     </div>
@@ -1414,7 +1414,7 @@
                             <img src="avatarthree.jpg" alt="" style="width: 50px;">
                         </div>
                         <div>
-                            <h4>Sarah Johnson</h4>
+                            <h4>JIHAN P.K</h4>
                             <p>Translation Student</p>
                         </div>
                     </div>
@@ -1428,7 +1428,7 @@
                             <img src="avatartwo.jpg" alt="" style="width: 50px;">
                         </div>
                         <div>
-                            <h4>Maria Rodriguez</h4>
+                            <h4>Muhammad Rishan</h4>
                             <p>English Student</p>
                         </div>
                     </div>
@@ -1863,3 +1863,4 @@
 </script>
 </body>
 </html>
+
